ipc/ipdl/test/ipdl/error/trans_WrongDirection5.ipdl
rpc protocol trans_WrongDirection5 {

parent:
    rpc Msg();

state S1:
    call Msg goto S1;

};
